--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
-    "@supabase/supabase-js": "^2.58.0",
     "@tailwindcss/forms": "^0.5.10",
+    "firebase": "^12.3.0",
     "libphonenumber-js": "^1.12.8",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
